3.18.00 - 2014-01-20 - IR219 - Craig Brookes
* added new dependencies for fh forms work: These depenedencies are created and maintained in the jssdk project

src/main/webapp/studio/static/common/js/api/appFormjs-backbone.min.js
src/main/webapp/studio/static/common/js/api/appFormjs-core.min.js
src/main/webapp/studio/static/common/js/api/appFormsThemeCssGenerator.js
3.17.28 - 2014-01-17 - IR219 - Damian Beresford
-----------------------------------------------
* 3114 - Need a property to override website redirected to for unknown domains

3.17.27 - 2014-01-14 - IR219 - Damian Beresford
-----------------------------------------------
* 5324 - Add mssql node module as a Cloud Plugin
* 5326 - Add Auth0 as a Cloud Plugin
* 5325 - Add New Relic as a Cloud Plugin

3.17.26 - 2014-01-07 - IR218 - Wei Li
--------------------------------------------
* 5525 - Fix ios native sdk armv7s linker error

3.17.25 - 2013-12-12 - IR216 - Jason Madigan
--------------------------------------------
* 5348 - Resolved an issue with Landing Pages not rendering in domains with custom landing pages

3.17.24 - 2013-12-09 - IR216 - Wei Li, Jason Madigan
--------------------------------------------
* 5246 - Add support for building windows phone 8 apps
* 5311 - Fixed a bug where API Keys could not be revoked
* 5228 - Bay state health theme - "baystatehealth"

3.17.23 - 2013-12-04 - IR216 - Damian Beresford
-----------------------------------------------
* 5286 - fh-studio work for 'clean' checkbox on deploy screen

3.18.00 - 2013-11-01 - IR213 - Craig Brookes/Cian Clarke
------------------------------------------------------
* mCMS

3.17.22 - 2013-11-26 - IR215 - David Martin
--------------------------------------------
* 5141 - Added new Cloud Plugins and Plugin category for Amazon Node.js Module
* 5056 - Improvements to autofocus with modals that have input elements
* 5054 - Improvements to Databrowser migration steps to show more detailed info on initialisation errors