@@ -17,9 +17,11 @@ String pageName = studio.getPageName();
     <li class="apps-tab">
       <a id="apps_tab" href="#tabs-1">Apps</a>
     </li>
-    <li class="forms-tab">
-      <a id="forms_tab" href="#tabs-8">Forms</a>
-    </li>
+    <% if(studio.getProperty("appforms-enabled").equals("true")){ %>
+        <li class="forms-tab">
+          <a id="forms_tab" href="#tabs-8">Forms</a>
+        </li>
+    <% } %>
     <% if(studio.getProperty("pluginsEnabled").equals("true")){ %>
     <li class="plugins-tab">
       <a id="plugins_tab" href="#tabs-2">Plugins</a>
@@ -58,7 +60,9 @@ String pageName = studio.getPageName();
 
   <% if (studio.inGroup(com.feedhenry.studio.StudioBean.GROUP_DEVELOPER)) { %>
     <jsp:include page="./apps/apps_tab.html" />
-   <jsp:include page="./forms/forms_tab.html" />
+    <% if(studio.getProperty("appforms-enabled").equals("true")){ %>
+        <jsp:include page="./forms/forms_tab.html" />
+    <% } %>
 
     <% if(studio.getProperty("pluginsEnabled").equals("true")){ %>
       <%@ include file="./plugins/plugins_snippets.html" %>
