@@ -7,6 +7,12 @@ Component: fh-studio
 src/main/webapp/studio/static/common/js/api/appFormjs-backbone.min.js
 src/main/webapp/studio/static/common/js/api/appFormjs-core.min.js
 src/main/webapp/studio/static/common/js/api/appFormsThemeCssGenerator.js
+
+
+* 5180, 5181 add forms rules views to the forms tab
+* 5239, 5270 app forms submission lists and details views
+
+
 3.17.28 - 2014-01-17 - IR219 - Damian Beresford
 -----------------------------------------------
 * 3114 - Need a property to override website redirected to for unknown domains
